WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
208295
REGRESSION(
r257299
): [GTK] Test fast/replaced/table-percent-height.html is failing since
r257299
https://bugs.webkit.org/show_bug.cgi?id=208295
Summary
REGRESSION(r257299): [GTK] Test fast/replaced/table-percent-height.html is fa...
Carlos Garcia Campos
Reported
2020-02-27 03:34:11 PST
We are now hardcoding the size of check and radio buttons, except when width and height are both specified.
Attachments
Patch
(1.81 KB, patch)
2020-02-27 03:35 PST
,
Carlos Garcia Campos
aperez
: review+
aperez
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2020-02-27 03:35:54 PST
Created
attachment 391847
[details]
Patch
Adrian Perez
Comment 2
2020-02-27 05:34:21 PST
Comment on
attachment 391847
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=391847&action=review
Please fix the typo in the ChangeLog before landing =)
> Source/WebCore/ChangeLog:11 > + (WebCore::ThemeAdwaita::controlSize const): Only set width and height of check and rario buttons when they are
Typo: s/rario/radio
Carlos Garcia Campos
Comment 3
2020-02-28 01:36:27 PST
Committed
r257629
: <
https://trac.webkit.org/changeset/257629
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug