REGRESSION(r257299): [GTK] Test fast/replaced/table-percent-height.html is failing since r257299 https://bugs.webkit.org/show_bug.cgi?id=208295

Reviewed by Adrian Perez de Castro.

We are now hardcoding the size of check and radio buttons, except when width and height are both specified.

* platform/adwaita/ThemeAdwaita.cpp:
(WebCore::ThemeAdwaita::controlSize const): Only set width and height of check and radio buttons when they are
intrinsic or auto.

Canonical link: https://commits.webkit.org/221298@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@257629 268f45cc-cd09-0410-ab3c-d52691b4dbfc